# Rust-MonitoringTool

./: Cargo.toml  README.txt  schema.sql  servers.db
monitor_app/: Cargo.toml  servers.db
monitor_app/src/: cli.rs  main.rs  ui.rs
monitor_lib/: Cargo.toml
monitor_lib/src/: db.rs  engine.rs  lib.rs  models.rs  schema.rs
